# cs240h-fall11

./: README
labs/lab1/: Makefile  README  lab1.cabal  task.hs
labs/lab2/: Makefile  README  Rect.hs  lab2.cabal  task.hs
